# golaberto

./: .gems  .gitignore  Capfile  Gemfile  Rakefile  TODO  a.sql  config.ru
app/controllers/: account_controller.rb  application.rb  application_controller.rb  category_controller.rb  championship_controller.rb  comment_controller.rb  cookie_controller.rb  game_controller.rb  group_controller.rb  home_controller.rb  phase_controller.rb  player_controller.rb  referee_controller.rb  stadium_controller.rb  team_controller.rb  team_group_controller.rb  user_controller.rb
app/helpers/: application_helper.rb  championship_helper.rb  cookie_helper.rb  date_helper.rb  game_helper.rb  phase_helper.rb  player_helper.rb  referee_helper.rb  stadium_helper.rb  team_group_helper.rb  user_helper.rb
app/models/: ability.rb  category.rb  championship.rb  comment.rb  game.rb  goal.rb  group.rb  historical_rating.rb  phase.rb  player.rb  player_game.rb  referee.rb  role.rb  (+7 more)
config/: application.rb  asset_packages.yml  boot.rb  cable.yml  config.yml  credentials.yml.enc  database.yml  deploy.rb  environment.rb  master.key  newrelic.yml  routes.rb
db/: schema.rb
go/: .poisson.go.swp  poisson.go
lib/: authenticated_system.rb  geo_clusterer.rb  gettext_date.rb  gettext_will_paginate.rb  google_url_signer.rb  image_upload.rb  poisson.rb  role_requirement_system.rb  scrape.rb
locale/: app.pot  model_attributes.rb
po/: golaberto.pot
public/: .htaccess  dispatch.fcgi  open-flash-chart.swf  robots.txt
stats/: Cargo.toml  diesel.toml
stats/src/: main.rs  models.rs  schema.rs
(+314 files in other folders)
