[package]
name = "stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.2", features = ["mysql", "chrono"] }
diesel-async = { version = "0.2.0", features = ["mysql", "mobc"] }
dotenv = "0.15.0"
chrono = "0.4.23"
futures = "0.3.25"
tokio = { version = "1", features = ["full"] }