[package]
name = "stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.2.3", features = ["mysql", "chrono", "r2d2"] }
dotenv = "0.15.0"
chrono = "0.4.23"
itertools = "0.10.5"
smallvec = "1.10.0"